css bugfixes in store page: left main_home margin, scrollbar in Safari

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -122,6 +122,32 @@ hr{
     border: 1px solid #5a5a5a;
 }
 
+/* ------- SCROLLBAR ------- */
+/* -webkit-scrollbar not supported in Firefox and Edge < 79 */
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #a5a5a5;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #5a5a5a;
+}
+
+
+
 
 /* -------- SOME GENERAL USE CLASSES ----- */
 
@@ -1147,11 +1173,12 @@ aside.filter-bar{
     padding: 15px 0 30px 0;
     box-shadow: inset 0 -7px 8px -7px rgba(44, 41, 41, 0.8); /*Box Shadow only bottom*/
     z-index: 2;
+    overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 /* Adapt MAIN DIV to filter bar on the left */
 /* Only wide screen - Check medium-size.css to mobile view */
-.filter-bar ~ .main_home{
+.filter-bar ~ .container .main_home{
     margin-left: max(10%, 210px);
 }
 
